# python-package

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
tests/: test_pre_gen_project.py
{{ cookiecutter.package_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
{{ cookiecutter.package_name }}/src/{{ cookiecutter.import_name }}/: __init__.py
