[project]
name = "python-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Gabriel Mello Silva", email = "gabriel-melloc@proton.me" }]
requires-python = ">=3.11"
dependencies = ["cookiecutter>=2"]

[dependency-groups]
dev = ["pre-commit==4.5.1", "pytest==9.0.2"]

[tool.uv]
package = true
resolution = "lowest-direct"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff.lint]
extend-select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "I",   # isort
    "SIM", # flake8-simplify
]
